--- a/example/content/templates/content/form.html
+++ b/example/content/templates/content/form.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block page_header %}
-    <h1>django-sirtrevor example</h1>
-    <p class="lead">This is built with <a href="http://madebymany.github.io/sir-trevor-js/">sir-trevor-js</a> and <a href="https://github.com/philippbosch/django-sirtrevor">django-sirtrevor</a></p>
+    <h1>django-sirtrevor-editor example</h1>
+    <p class="lead">This is built with <a href="http://madebymany.github.io/sir-trevor-js/">sir-trevor-js</a> and <a href="https://github.com/wejhink/django-sirtrevor-editor">django-sirtrevor-editor</a></p>
 {% endblock %}
 
 {% block content %}
