--- a/example/content/templates/content/output.html
+++ b/example/content/templates/content/output.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_header %}
-    <h1>django-sirtrevor example</h1>
+    <h1>django-sirtrevor-editor example</h1>
     <p class="lead">This is how the rendered output looks like.</p>
 {% endblock %}
 
